# amppaint

./: README.md  amppaint.cabal
src/: Main.hs
