name:                amppaint
version:             0.1.0.0
synopsis:            Convert monochrome images to audio for FM broadcast
description:         Please see README.md
homepage:            https://github.com/unknownloner/amppaint#readme
license:             BSD3
license-file:        LICENSE
author:              Galen Alderson
maintainer:          galen.alderson@gmail.com
copyright:           2016 Galen Alderson
category:            Radio
build-type:          Simple
cabal-version:       >=1.10

executable amppaint
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels >= 3.2.7.2 && < 4
                     , bytestring >= 0.10.6.0 && < 1
                     , array >= 0.5.1.0 && < 1
                     , HCodecs >= 0.5 && < 1
